--- a/demo_ecs_out.yaml
+++ b/demo_ecs_out.yaml
@@ -3,12 +3,15 @@
 ###
 name: demo_ecs_fargate_flow
 description: null
-version: ec02421e98481b8bd7844af823a30a7c
+version: 1817ffc354de2fd99a575918522d7146
 # The work queue that will handle this deployment's runs
 work_queue_name: default
 tags: []
 parameters: {}
-schedule: null
+schedule:
+  cron: '*/1 * * * *'
+  timezone: null
+  day_or: true
 infra_overrides: {}
 
 ###
@@ -79,8 +82,8 @@ parameter_openapi_schema:
   properties:
     param:
       title: param
+      default: 4
       position: 0
       type: integer
-  required:
-  - param
+  required: null
   definitions: null
